fix: removes nav overflow on login sign up

--- a/src/containers/Navbar/Navbar.scss
+++ b/src/containers/Navbar/Navbar.scss
@@ -5,7 +5,6 @@
   &__bg-img {
     background: url("../../assets/images/navbar_bg.svg") no-repeat center bottom;
     background-size: contain;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
